updIR + added fig BZ

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -35,7 +35,7 @@
 %      3) the s-parameter method, although widely used, does not always give correct results
 %  * illustrated the difference of these results against CDH
 %  * provide the simulation environment which facilitates correct computations, 
-%    and solves the phase-ambiguity in the s-parameter method in particular
+%    and solves the phase-ambiguity in the s-parameter method in an original way
 
 
 
